--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcc 'PS'
 - !lcsh 'Short stories'
+- GITenberg
 title: George Loves Gistla
 url: http://www.gutenberg.org/ebooks/29578
